--- a/trunk/TravelDreamWeb/WebContent/login.xhtml
+++ b/trunk/TravelDreamWeb/WebContent/login.xhtml
@@ -9,21 +9,28 @@
 	<title>Login</title>
 </h:head>
 <h:body>
-	<p:panel header="Login Form">
-		<h:form id="login"
-			onsubmit="document.getElementById('login').action='j_security_check';"
-			prependId="false">
-			<h:panelGrid columns="2">
-				<p:outputLabel for="j_username" value="Email" />
-				<p:inputText id="j_username" name="j_username" />
-				<p:outputLabel for="j_password" value="Password" />
-				<p:password id="j_password" name="j_password" />
-				<p:commandButton id="submit" value="Login" ajax="false" />
-			</h:panelGrid>
-		</h:form>
-		<h:form rendered="#{param['user']}">
-			<h:link value="Register" outcome="register" />
-		</h:form>
-	</p:panel>
+	<ui:composition template="template.xhtml">
+		
+		<ui:define name="content">
+			<p:panel header="Login Form">
+				<h:form id="login"
+					onsubmit="document.getElementById('login').action='j_security_check';"
+					prependId="false">
+					<h:panelGrid columns="2">
+						<p:outputLabel for="j_username" value="Email" />
+						<p:inputText id="j_username" name="j_username" />
+						<p:outputLabel for="j_password" value="Password" />
+						<p:password id="j_password" name="j_password" />
+						<p:commandButton id="submit" value="Login" ajax="false" />
+					</h:panelGrid>
+				</h:form>
+				<h:form rendered="#{param['user']}">
+					<h:link value="Register" outcome="register" />
+				</h:form>
+			</p:panel>
+			
+		</ui:define>
+			
+	</ui:composition>
 </h:body>
 </html>
