--- a/trunk/TravelDreamWeb/WebContent/register.xhtml
+++ b/trunk/TravelDreamWeb/WebContent/register.xhtml
@@ -9,33 +9,39 @@
 	<title>Login</title>
 </h:head>
 <h:body>
-	<h:form>
-		<p:panel header="Registration Form">
-			<h:panelGrid columns="3" id="regGrid">
-				<h:outputLabel for="email">Email:</h:outputLabel>
-				<p:inputText id="email" value="#{registerBean.user.email}" />
-				<p:message for="email" />
-
-				<h:outputLabel for="firstName">First name:</h:outputLabel>
-				<p:inputText id="firstName" value="#{registerBean.user.firstName}" />
-				<p:message for="firstName" />
-
-				<h:outputLabel for="lastName">Last name:</h:outputLabel>
-				<p:inputText id="lastName" value="#{registerBean.user.lastName}" />
-				<p:message for="lastName" />
-
-				<h:outputLabel for="password">Password:</h:outputLabel>
-				<p:password id="password" value="#{registerBean.user.password}"
-					feedback="true" match="pwd2" label="Password"/>
-				<p:message for="password" />
-
-				<h:outputLabel for="pwd2">Confirm Password:</h:outputLabel>
-				<p:password id="pwd2" label="Confirm Password" value="#{registerBean.user.password}"/>
-			</h:panelGrid>
-			<p:commandButton value="Register" update="regGrid"
-				action="#{registerBean.register()}" />
-
-		</p:panel>
-	</h:form>
+	<ui:composition template="template.xhtml">
+		
+		<ui:define name="content">
+			<h:form>
+				<p:panel header="Registration Form">
+					<h:panelGrid columns="3" id="regGrid">
+						<h:outputLabel for="email">Email:</h:outputLabel>
+						<p:inputText id="email" value="#{registerBean.user.email}" />
+						<p:message for="email" />
+		
+						<h:outputLabel for="firstName">First name:</h:outputLabel>
+						<p:inputText id="firstName" value="#{registerBean.user.firstName}" />
+						<p:message for="firstName" />
+		
+						<h:outputLabel for="lastName">Last name:</h:outputLabel>
+						<p:inputText id="lastName" value="#{registerBean.user.lastName}" />
+						<p:message for="lastName" />
+		
+						<h:outputLabel for="password">Password:</h:outputLabel>
+						<p:password id="password" value="#{registerBean.user.password}"
+							feedback="true" match="pwd2" label="Password"/>
+						<p:message for="password" />
+		
+						<h:outputLabel for="pwd2">Confirm Password:</h:outputLabel>
+						<p:password id="pwd2" label="Confirm Password" value="#{registerBean.user.password}"/>
+					</h:panelGrid>
+					<p:commandButton value="Register" update="regGrid"
+						action="#{registerBean.register()}" />
+		
+				</p:panel>
+			</h:form>
+		</ui:define>
+			
+	</ui:composition>
 </h:body>
 </html>
