--- a/trunk/TravelDreamWeb/WebContent/template.xhtml
+++ b/trunk/TravelDreamWeb/WebContent/template.xhtml
@@ -13,7 +13,11 @@
 	<div class="container">
 		<div id="header"></div>
 		<div id="line"></div>
-		<div id="menu"></div>
+		<div id="menu">
+			<ui:insert name="menu" >
+		 	  
+		   	</ui:insert>
+		</div>
 		<div id="content">
 		  	<ui:insert name="content" >
 		 	  
