--- a/trunk/TravelDreamWeb/WebContent/user/acquistoOk.xhtml
+++ b/trunk/TravelDreamWeb/WebContent/user/acquistoOk.xhtml
@@ -1,16 +1,44 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:h="http://java.sun.com/jsf/html"
-        xmlns:f="http://java.sun.com/jsf/core"
-        xmlns:ui="http://java.sun.com/jsf/facelets"
-        xmlns:p="http://primefaces.org/ui">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
 
 
 <h:head>
-        <title>Aggiungi Camere</title>
+	<title>Aggiungi Camere</title>
 </h:head>
 <h:body>
-<h1>Hello #{userBean.name} hai acquistato un pacchetto!!</h1>
-<h:link outcome="index" value="home" />
+	<ui:composition template="../template.xhtml">
+		<ui:define name="menu">
+
+
+			<h:form prependId="false">
+				<p:menu id="left">
+
+					<p:submenu label="Area Personale">
+						<p:menuitem value="Home" outcome="index" icon="ui-icon-home" />
+						<p:menuitem value="Cronologia Viaggi" outcome="storicoViaggi"
+							icon="ui-icon-star" />
+						<p:menuitem value="Le Mie GiftList" outcome="index"
+							icon="ui-icon-star" />
+						<p:menuitem value="Invito Viaggi" outcome="showInviti"
+							icon="ui-icon-star" />
+						<p:menuitem value="Invito Giftlist" outcome="index"
+							icon="ui-icon-star" />
+						<p:menuitem value="Logout" action="#{logoutBean.logout()}"
+							icon="ui-icon-close" />
+					</p:submenu>
+				</p:menu>
+			</h:form>
+		</ui:define>
+
+		<ui:define name="content">
+			<h1>Hello #{userBean.name} hai acquistato un pacchetto!!</h1>
+			<h:link outcome="index" value="home" />
+		</ui:define>
+
+	</ui:composition>
 </h:body>
 </html>
