--- a/trunk/TravelDreamWeb/WebContent/user/noCamDisp.xhtml
+++ b/trunk/TravelDreamWeb/WebContent/user/noCamDisp.xhtml
@@ -10,8 +10,35 @@
         <title>Aggiungi Camere</title>
 </h:head>
 <h:body>
+<ui:composition template="../template.xhtml">
+<ui:define name="menu">
+
+
+			<h:form prependId="false">
+			<p:menu id="left">
+
+				<p:submenu label="Area Personale">
+					<p:menuitem value="Home" outcome="index" icon="ui-icon-home" />
+					<p:menuitem value="Cronologia Viaggi" outcome="storicoViaggi"
+						icon="ui-icon-star" />
+					<p:menuitem value="Le Mie GiftList" outcome="index"
+						icon="ui-icon-star" />
+					<p:menuitem value="Invito Viaggi" outcome="showInviti"
+						icon="ui-icon-star" />
+					<p:menuitem value="Invito Giftlist" outcome="index"
+						icon="ui-icon-star" />
+					<p:menuitem value="Logout" action="#{logoutBean.logout()}"
+						icon="ui-icon-close" />
+				</p:submenu>
+			</p:menu>
+			</h:form>
+		</ui:define>
+		<ui:define name="content">
 <h1>Hello #{userBean.name} non ci sono abbastanza camere nell'albergo !!!!</h1>
 
 <h:link outcome="index" value="Home" />
+</ui:define>
+			
+		</ui:composition>
 </h:body>
 </html>
