--- a/trunk/TravelDreamWeb/WebContent/user/compilaPacchetto.xhtml
+++ b/trunk/TravelDreamWeb/WebContent/user/compilaPacchetto.xhtml
@@ -75,7 +75,7 @@
 
 						<h:outputText />
 						<p:commandButton value="Acquista" icon="ui-icon-search"
-							update="regGrid" oncomplete="PF('confermaDialog').show()" />
+							update="regGrid" actionListener="#{compilaBean.calcola()}" oncomplete="PF('confermaDialog').show()" />
 						<p:commandButton value="Modifica Pacchetto" icon="ui-icon-search"
 							update="regGrid" actionListener="#{compilaBean.modifica()}" />
 						<p:commandButton value="AcquistaSuggerisci" icon="ui-icon-search"
@@ -84,7 +84,7 @@
 							update="regGrid" actionListener="#{compilaBean.gift()}" />
 						<p:dialog header="conferma" widgetVar="confermaDialog" width="450"
 							showEffect="explode" hideEffect="explode">
-							<h:outputLabel value="SEI SICURO DI VOLER ACQUISTARE? " />
+							<h:outputLabel value="SEI SICURO DI VOLER ACQUISTARE? costo tot: #{compilaBean.costo} euro" />
 							<p:commandButton value="Acquista" update="regGrid"
 								actionListener="#{compilaBean.acqusita()}" />
 
