--- a/trunk/TravelDreamWeb/WebContent/user/invitaAmico.xhtml
+++ b/trunk/TravelDreamWeb/WebContent/user/invitaAmico.xhtml
@@ -57,7 +57,7 @@
 						<h:outputText />
 						<h:outputText />
 						<h:outputText />
-						<p:commandButton value="Ivia gli inviti" icon="ui-icon-search"
+						<p:commandButton value="Invia gli inviti" icon="ui-icon-search"
 							update="regGrid" actionListener="#{invitaAmicoBean.invita()}" />
 
 					</h:panelGrid>
