--- a/trunk/TravelDreamWeb/WebContent/user/index.xhtml
+++ b/trunk/TravelDreamWeb/WebContent/user/index.xhtml
@@ -21,7 +21,7 @@
 					<p:menuitem value="Home" outcome="index" icon="ui-icon-home" />
 					<p:menuitem value="Cronologia Viaggi" outcome="storicoViaggi"
 						icon="ui-icon-star" />
-					<p:menuitem value="Le Mie GiftList" outcome="index"
+					<p:menuitem value="Le Mie GiftList" outcome="statoGift"
 						icon="ui-icon-star" />
 					<p:menuitem value="Invito Viaggi" outcome="showInviti"
 						icon="ui-icon-star" />
